--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,10 @@
-PRIVATE_KEY=0x...
+PRIVATE_KEY=
+BUILDER_API_KEY=
+BUILDER_SECRET=
+BUILDER_PASS_PHRASE=
+RPC_URL=
+POLY_PROXY_ADDRESS=
+Chain_ID=137
+
+# Operational
+DRY_RUN=false
