--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "type": "module",
     "scripts": {
         "build": "tsc",
-        "start": "ts-node-esm src/index.ts",
-        "dev": "ts-node-esm src/index.ts",
+        "start": "node dist/main.js",
+        "dev": "ts-node-esm src/main.ts",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
@@ -23,8 +23,9 @@
         "ws": "^8.19.0"
     },
     "devDependencies": {
+        "@types/node": "^25.0.8",
         "@types/ws": "^8.18.1",
-        "ts-node": "^10.0.0",
+        "ts-node": "^10.9.2",
         "typescript": "^5.0.0"
     }
 }
