restarted .js extensions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,6 @@
         "dist"
     ],
     "ts-node": {
-        "esm": true,
-        "experimentalSpecifierResolution": "node"
+        "esm": true
     }
 }
